wip: add sidebar items

--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 	<div class="layout">
 		<div class="sidebar">
-
+      <div class="sidebar-item">
+        <span class="mdi mdi-view-dashboard"></span>
+        Dashboard
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-home"></span>
+        Home
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-account-circle"></span>
+        Profile
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-message"></span>
+        Messages
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-clock"></span>
+        History
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-file-document-multiple"></span>
+        Tasks
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-account-group"></span>
+        Communities
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-cog"></span>
+        Settings
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-comment-question"></span>
+        Support
+      </div>
+      <div class="sidebar-item">
+        <span class="mdi mdi-shield-check"></span>
+        Privacy
+      </div>
 		</div>
 		<div class="header">
 			
