wip: add basic header content

--- a/index.html
+++ b/index.html
@@ -9,55 +9,83 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<div class="layout">
-		<div class="sidebar">
-      <div class="sidebar-item">
-        <span class="mdi mdi-view-dashboard"></span>
-        Dashboard
+    <div class="layout">
+      <div class="header">
+        <div class="searchbar">
+          <span class="mdi mdi-magnify"></span>
+          <input/>
+        </div>
+        <div class="profile-toolbar">
+          <span class="mdi mdi-bell-ring-outline"></span>
+          <div class="profile-toolbar-image"></div>
+          <span>Morgan Oakley</span>
+        </div>
+        <div class="greeting">
+          <div class="greeting-image"></div>
+          <div>
+            <p>Hi there,</p>
+            <p>Morgan Oakley (@morgan)</p>
+          </div>
+        </div>
+        <div class="button-toolbar">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
       </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-home"></span>
-        Home
-      </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-account-circle"></span>
-        Profile
-      </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-message"></span>
-        Messages
-      </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-clock"></span>
-        History
-      </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-file-document-multiple"></span>
-        Tasks
-      </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-account-group"></span>
-        Communities
-      </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-cog"></span>
-        Settings
-      </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-comment-question"></span>
-        Support
-      </div>
-      <div class="sidebar-item">
-        <span class="mdi mdi-shield-check"></span>
-        Privacy
-      </div>
-		</div>
-		<div class="header">
-			
-		</div>
-		<div class="content">
 
-		</div>
-	</div>
+      <nav class="sidebar">
+        <div class="sidebar-header">
+          <div class="sidebar-item">
+            <span class="mdi mdi-view-dashboard"></span>
+            <a>Dashboard</a>
+          </div>
+        </div>
+        <div class="sidebar-main">
+          <div class="sidebar-item">
+            <span class="mdi mdi-home"></span>
+            <a href="">Home</a>
+          </div>
+          <div class="sidebar-item">
+            <span class="mdi mdi-account-circle"></span>
+            <a href="">Profile</a>
+          </div>
+          <div class="sidebar-item">
+            <span class="mdi mdi-message"></span>
+            <a href="">Messages</a>
+          </div>
+          <div class="sidebar-item">
+            <span class="mdi mdi-clock"></span>
+            <a href="">History</a>
+          </div>
+          <div class="sidebar-item">
+            <span class="mdi mdi-file-document-multiple"></span>
+            <a href="">Tasks</a>
+          </div>
+          <div class="sidebar-item">
+            <span class="mdi mdi-account-group"></span>
+            <a href="">Communities</a>
+          </div>
+        </div>
+        <div class="sidebar-footer">
+          <div class="sidebar-item">
+            <span class="mdi mdi-cog"></span>
+            <a href="">Settings</a>
+          </div>
+          <div class="sidebar-item">
+            <span class="mdi mdi-comment-question"></span>
+            <a href="">Support</a>
+          </div>
+          <div class="sidebar-item">
+            <span class="mdi mdi-shield-check"></span>
+            <a href="">Privacy</a>
+          </div>
+        </div>
+      </nav>
+
+      <div class="content">
+
+      </div>
+    </div>
   </body>
 </html>
