--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
       <div class="header">
         <div class="searchbar">
           <span class="mdi mdi-magnify"></span>
-          <input/>
+          <input class="searchfield" placeholder="Search..."/>
         </div>
         <div class="profile-toolbar">
-          <span class="mdi mdi-bell-ring-outline"></span>
+          <span class="mdi mdi-bell-ring-outline interactable-icon"></span>
           <div class="profile-toolbar-image"></div>
           <span>Morgan Oakley</span>
         </div>
         <div class="greeting">
           <div class="greeting-image"></div>
           <div>
-            <p>Hi there,</p>
-            <p>Morgan Oakley (@morgan)</p>
+            <p class="greeting-first-line">Hi there,</p>
+            <p class="greeting-second-line">Morgan Oakley (@morgan)</p>
           </div>
         </div>
         <div class="button-toolbar">
@@ -83,9 +83,143 @@
         </div>
       </nav>
 
-      <div class="content">
+      <main>
+        <section>
+          Your Projects
+          <div class="projects-grid">
+            <div class="project-panel">
+              <div class="project-panel-highlight-bar"></div>
+              <div class="project-panel-content">
+                <p>
+                  Super Cool Project
+                </p>
+                <p class="project-panel-text">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                  et justo duo dolores et ea rebum.
+                </p>
+                <div class="project-panel-button-bar">
+                  <span class="mdi mdi-star-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-share-variant-outline interactable-icon"></span>
+                </div>
+              </div>
+            </div>
+            
+            <div class="project-panel">
+              <div class="project-panel-highlight-bar"></div>
+              <div class="project-panel-content">
+                <p>
+                  Super Cool Project
+                </p>
+                <p class="project-panel-text">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                  et justo duo dolores et ea rebum.
+                </p>
+                <div class="project-panel-button-bar">
+                  <span class="mdi mdi-star-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-share-variant-outline interactable-icon"></span>
+                </div>
+              </div>
+            </div>
 
-      </div>
+            <div class="project-panel">
+              <div class="project-panel-highlight-bar"></div>
+              <div class="project-panel-content">
+                <p>
+                  Super Cool Project
+                </p>
+                <p class="project-panel-text">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                  et justo duo dolores et ea rebum.
+                </p>
+                <div class="project-panel-button-bar">
+                  <span class="mdi mdi-star-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-share-variant-outline interactable-icon"></span>
+                </div>
+              </div>
+            </div>
+
+            <div class="project-panel">
+              <div class="project-panel-highlight-bar"></div>
+              <div class="project-panel-content">
+                <p>
+                  Super Cool Project
+                </p>
+                <p class="project-panel-text">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                  et justo duo dolores et ea rebum.
+                </p>
+                <div class="project-panel-button-bar">
+                  <span class="mdi mdi-star-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-share-variant-outline interactable-icon"></span>
+                </div>
+              </div>
+            </div>
+
+            <div class="project-panel">
+              <div class="project-panel-highlight-bar"></div>
+              <div class="project-panel-content">
+                <p>
+                  Super Cool Project
+                </p>
+                <p class="project-panel-text">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                  et justo duo dolores et ea rebum.
+                </p>
+                <div class="project-panel-button-bar">
+                  <span class="mdi mdi-star-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-share-variant-outline interactable-icon"></span>
+                </div>
+              </div>
+            </div>
+
+            <div class="project-panel">
+              <div class="project-panel-highlight-bar"></div>
+              <div class="project-panel-content">
+                <p>
+                  Super Cool Project
+                </p>
+                <p class="project-panel-text">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                  et justo duo dolores et ea rebum.
+                </p>
+                <div class="project-panel-button-bar">
+                  <span class="mdi mdi-star-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
+                  <span class="mdi mdi-share-variant-outline interactable-icon"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <aside>
+          Announcements
+          <div>
+
+          </div>
+          Trending
+          <div>
+            
+          </div>
+        </aside>
+      </main>
     </div>
   </body>
 </html>
