Finish aside content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="profile-toolbar">
           <span class="mdi mdi-bell-ring-outline interactable-icon"></span>
-          <div class="profile-toolbar-image"></div>
+          <div class="profile-image profile-image-own"></div>
           <span>Morgan Oakley</span>
         </div>
         <div class="greeting">
@@ -90,15 +90,17 @@
             <div class="project-panel">
               <div class="project-panel-highlight-bar"></div>
               <div class="project-panel-content">
-                <p>
-                  Super Cool Project
-                </p>
-                <p class="project-panel-text">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                  et justo duo dolores et ea rebum.
-                </p>
+                <div>
+                  <p class="project-panel-title">
+                    Super Cool Project
+                  </p>
+                  <p class="project-panel-text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                    et justo duo dolores et ea rebum.
+                  </p>
+                </div>
                 <div class="project-panel-button-bar">
                   <span class="mdi mdi-star-plus-outline interactable-icon"></span>
                   <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
@@ -110,15 +112,18 @@
             <div class="project-panel">
               <div class="project-panel-highlight-bar"></div>
               <div class="project-panel-content">
-                <p>
-                  Super Cool Project
-                </p>
-                <p class="project-panel-text">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                  et justo duo dolores et ea rebum.
-                </p>
+                <div>
+                  <p class="project-panel-title">
+                    Less Cool Project
+                  </p>
+                  <p class="project-panel-text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                    et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+                    no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                  </p>
+                </div>
                 <div class="project-panel-button-bar">
                   <span class="mdi mdi-star-plus-outline interactable-icon"></span>
                   <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
@@ -130,15 +135,16 @@
             <div class="project-panel">
               <div class="project-panel-highlight-bar"></div>
               <div class="project-panel-content">
-                <p>
-                  Super Cool Project
-                </p>
-                <p class="project-panel-text">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                  et justo duo dolores et ea rebum.
-                </p>
+                <div>
+                  <p class="project-panel-title">
+                    Impossible App
+                  </p>
+                  <p class="project-panel-text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua.
+                  </p>
+                </div>
                 <div class="project-panel-button-bar">
                   <span class="mdi mdi-star-plus-outline interactable-icon"></span>
                   <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
@@ -150,15 +156,18 @@
             <div class="project-panel">
               <div class="project-panel-highlight-bar"></div>
               <div class="project-panel-content">
-                <p>
-                  Super Cool Project
-                </p>
-                <p class="project-panel-text">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                  et justo duo dolores et ea rebum.
-                </p>
+                <div>
+                  <p class="project-panel-title">
+                    Easy Peasy App
+                  </p>
+                  <p class="project-panel-text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                    nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+                    sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                    Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet.
+                  </p>
+                </div>
                 <div class="project-panel-button-bar">
                   <span class="mdi mdi-star-plus-outline interactable-icon"></span>
                   <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
@@ -170,15 +179,17 @@
             <div class="project-panel">
               <div class="project-panel-highlight-bar"></div>
               <div class="project-panel-content">
-                <p>
-                  Super Cool Project
-                </p>
-                <p class="project-panel-text">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                  et justo duo dolores et ea rebum.
-                </p>
+                <div>
+                  <p class="project-panel-title">
+                    Add Blocker
+                  </p>
+                  <p class="project-panel-text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                    nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+                    sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                    Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                  </p>
+                </div>
                 <div class="project-panel-button-bar">
                   <span class="mdi mdi-star-plus-outline interactable-icon"></span>
                   <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
@@ -190,15 +201,16 @@
             <div class="project-panel">
               <div class="project-panel-highlight-bar"></div>
               <div class="project-panel-content">
-                <p>
-                  Super Cool Project
-                </p>
-                <p class="project-panel-text">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                  sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                  magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                  et justo duo dolores et ea rebum.
-                </p>
+                <div>
+                  <p class="project-panel-title">
+                    Money Maker
+                  </p>
+                  <p class="project-panel-text">
+                    LLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                    invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                    At vero eos et accusam et justo duo dolores et ea.
+                  </p>
+                </div>
                 <div class="project-panel-button-bar">
                   <span class="mdi mdi-star-plus-outline interactable-icon"></span>
                   <span class="mdi mdi-eye-plus-outline interactable-icon"></span>
@@ -210,13 +222,59 @@
         </section>
 
         <aside>
-          Announcements
-          <div>
+          <span>Announcements</span>
+          <div class="announcements-panel">
+            <div>
+              <p class="announcement-panel-title">Site Maintainance</p>
+              <p class="announcement-panel-text">
+                LLorem ipsum dolor sit amet, consetetur sadipscing elit.
+              </p>
+            </div>
 
+            <div class="panel-separator"></div>
+
+            <div>
+              <p class="announcement-panel-title">Copmmunity Share Day</p>
+              <p class="announcement-panel-text">
+                LLorem ipsum dolor sit amet, consetetur sadipscing elit, sed diam nonumy.
+              </p>
+            </div>
+
+            <div class="panel-separator"></div>
+
+            <div>
+              <p class="announcement-panel-title">Site Maintainance</p>
+              <p class="announcement-panel-text">
+                LLorem ipsum dolor sit amet, consetetur sadipscing elit, sed diam nonumy eirmod tempor.
+              </p>
+            </div>
           </div>
-          Trending
-          <div>
-            
+          
+          <span>Trending</span>
+          <div class="trending-container-panel">
+            <div class="trending-panel">
+              <div class="trending-panel-image profile-image avatar-image1"></div>
+              <div class="trending-panel-name-tag">@tegan</div>
+              <div class="trending-panel-comment">World Peace Builder</div>
+            </div>
+
+            <div class="trending-panel">
+              <div class="trending-panel-image profile-image profile-image-own"></div>
+              <div class="trending-panel-name-tag">@morgan</div>
+              <div class="trending-panel-comment">Super Cool Project</div>
+            </div>
+
+            <div class="trending-panel">
+              <div class="trending-panel-image profile-image avatar-image2"></div>
+              <div class="trending-panel-name-tag">@kendall</div>
+              <div class="trending-panel-comment">Live Changing App</div>
+            </div>
+
+            <div class="trending-panel">
+              <div class="trending-panel-image profile-image avatar-image3"></div>
+              <div class="trending-panel-name-tag">@alex</div>
+              <div class="trending-panel-comment">No Traffic Maker</div>
+            </div>
           </div>
         </aside>
       </main>
